--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "babel js -d dist/js",
     "watch": "babel js -w -d dist/js"
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2"
   }
