--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "fantasy-epl",
   "version": "0.1.0",
   "scripts": {
-    "build": "babel js -d dist/js",
+    "build": "babel js -d dist/js; uglifyjs -c -o dist/js/index.js dist/js/index.js",
     "watch": "babel js -w -d dist/js"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
-    "babel-preset-es2015": "^6.13.2"
+    "babel-preset-es2015": "^6.13.2",
+    "uglify-js": "^2.7.3"
   }
 }
