--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "fantasy-epl",
   "version": "0.1.0",
   "scripts": {
-    "build": "babel js -d dist/js; uglifyjs -c -o dist/js/index.js dist/js/index.js",
+    "build": "babel js -d dist/js; uglifyjs -c -o dist/js/index.js dist/js/index.js; node build-scripts/replace.js",
     "watch": "babel js -w -d dist/js"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
+    "replace": "^0.3.0",
     "uglify-js": "^2.7.3"
   }
 }
